--- a/assets/scss/ui/stats.scss
+++ b/assets/scss/ui/stats.scss
@@ -33,7 +33,6 @@
 
   @media(max-width: 700px) {
     border-radius: 0;
-    margin: 0 -32px;
     flex-wrap: wrap;
 
     li {
